update whitepaper and website

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -171,7 +171,7 @@
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>ERC20 Standard Ethereum Token</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>VirtuTV Tokens are distributed <strong class="color_light">by smart contract</strong></li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Symbol Name: VRTU</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 ETH = 160 VRTU</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Price Per Token: 1 VRTU = 0.7 USD</li>
                   </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 m_bottom_15">
@@ -222,12 +222,12 @@
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">August 2017 </time> 1st token crowdsale.
+              <time class="color_green">Quarter 1 2018 </time> 1st token crowdsale.
             </div>
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 1 2018</time> Alpha MVP with basic functionality. Open to crowdsale participants only.
+              <time class="color_green">Quarter 2 2018</time> Alpha MVP with basic functionality. Open to crowdsale participants only.
             </div>
           </li>
           <li>
